<?xml version="1.0"?>

<!-- Copyright (c) 2018 André Gilerson (andre.gilerson@gmail.com)

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->

<package>
  <name>rviz_vive</name>
  <version>1.0.0</version>
  <description>View RVIZ on the HTC Vive</description>
  <maintainer email="andre.gilerson@gmail.com">Andre Gilerson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>libogre-dev</build_depend>
  <run_depend>libogre-dev</run_depend>

  <build_depend>libqt4-dev</build_depend>
  <run_depend>libqt4-dev</run_depend>

  <build_depend>libqt4-opengl-dev</build_depend>
  <run_depend>libqt4-opengl-dev</run_depend>

  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <export>
     <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
